<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#11DF1D83">

    <LinearLayout
        android:id="@+id/Lin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_170sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <EditText
            android:id="@+id/ed_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ed_nim"
            android:inputType="number"/>

        <EditText
            android:id="@+id/ed_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ed_nama"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/ed_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ed_jurusan"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:backgroundTint="#3BF479"
                android:text="@string/btn_simpan"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/btn_showdata"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="#C6F41F"
                android:text="@string/btn_show_data"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="#E6E04FFA"
                android:text="@string/btn_logout"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>