<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#FFFFFFFF"
    android:layout_margin="@dimen/_8sdp"
    android:id="@+id/list_items">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_weight="2.5"
        app:srcCompat="@drawable/graduate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_6sdp">

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/tv_nim"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:textColor="#FFA230" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/tv_nama"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:textColor="#FFA230"/>

        <TextView
            android:id="@+id/tv_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/tv_jurusan"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:textColor="#FFA230"/>

    </LinearLayout>

</LinearLayout>